# uicontroller

./: CMakeLists.txt  TOUCH_CONFIG.md
main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.c
src/: CMakeList.txt  cst816d.c  cst816d.h  spi_setup.c  spi_setup.h
ui/: project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
ui/components/: ui_comp_hook.c
ui/screens/: ui_Screen1.c  ui_Screen1.h
