idf_component_register(
    SRCS 
        "main.c"
        "../src/spi_setup.c"
        "../src/cst816d.c"
        "../ui/ui.c"
        "../ui/ui_helpers.c"
        "../ui/screens/ui_Screen1.c"
    INCLUDE_DIRS 
        "."
        "../src"
        "../ui"
     REQUIRES 
        lvgl
        esp_lcd
        driver
    )
